--- a/.gitignore
+++ b/.gitignore
@@ -4,30 +4,27 @@
 *.pyc
 *.gz
 mgltools_x86_64Linux2_1.5.6
-/data1/tgy/GA_llm/output
-/data1/tgy/GA_llm/fragment_GPT/output
-/data1/tgy/GA_llm/autogrow/output
-/data1/tgy/GA_llm/output_1
-/data1/tgy/GA_llm/datasets/decompose/decompose_results
-/data1/tgy/GA_llm/autogrow
-/data1/tgy/GA_llm/fragment_GPT
-/data1/tgy/GA_llm/output_2
-/data1/tgy/GA_llm/output_3
-/data1/tgy/GA_llm/output_reducegpt
-/data1/tgy/GA_llm/output_test
-*.smi
 /output
+/fragment_GPT/output
+/autogrow/output
 /output_1
+/datasets/decompose/decompose_results
+/autogrow
+/fragment_GPT
 /output_2
 /output_3
 /output_reducegpt
 /output_test
+/output_reducegpt_1
+/output_analyse
+*.smi
 *.pdb
 *.pdbqt
 *.log
 *.txt
 *.pdb_temp
 fragment_GPT/weights/checkpoint_330000.pth
+fragment_GPT/weights/fragpt.pt
 *.pth
 *.pkl
 fragment_GPT/log/events.out.tfevents.*
